tests/security/taintSinkWithComments/output.txt
ERROR: TaintedData - input.hack:7:21 - Data from a URL query string found its way to an HTML tag